@@ -1,0 +1,18 @@
+# Superstack programs
+
+* dec2bin
+    * Converts decimal to binary
+
+* find_length.ssf
+    * Find the length of a zero terminated sequence
+
+* find_max.ssf
+    * Find the maximum of a sequence
+
+* generate_N_random_numbers.ssf
+
+* shift_left.ssf
+
+* sum_stack.ssf
+
+* xor.ssf 
