@@ -1,1 +1,0 @@
-8 3 sub 8 3 255 xor 1 add add
