@@ -1,3 +1,5 @@
+  * Added the Superstack compiler and its documentation
+
 Version 1.0.2 2020-10-14
     * DB directive can now unroll string literals
     * Fixed the stack underflow error bug
